--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -4,7 +4,18 @@
 <br>
 <h2 class='text-left'>Top Hits</h2>
 <div class='movies container'>
-    {% for title, genre, poster, imdb in data %}
+    {% for title, genre, poster, imdb in top_movies %}
+        <a href='{% url "get_recommendations" imdb %}'>
+            <div class='movie'>
+                <img src="{{ poster }}" alt="">
+                <h6>{{ title }}</h6>
+            </div>
+        </a>
+    {% endfor %}
+</div>
+<h2 class='text-left'>Top Action Movies</h2>
+<div class='movies container'>
+    {% for title, genre, poster, imdb in top_action %}
         <a href='{% url "get_recommendations" imdb %}'>
             <div class='movie'>
                 <img src="{{ poster }}" alt="">
