--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -1,27 +1,38 @@
-{% extends 'movies/template.html' %}
+{% load static %}
 
-{% block content %}
-<br>
-<h2 class='text-left'>Top Hits</h2>
-<div class='movies container'>
-    {% for title, genre, poster, imdb in top_movies %}
-        <a href='{% url "get_recommendations" imdb %}'>
-            <div class='movie'>
-                <img src="{{ poster }}" alt="">
-                <h6>{{ title }}</h6>
-            </div>
-        </a>
-    {% endfor %}
-</div>
-<h2 class='text-left'>Top Action Movies</h2>
-<div class='movies container'>
-    {% for title, genre, poster, imdb in top_action %}
-        <a href='{% url "get_recommendations" imdb %}'>
-            <div class='movie'>
-                <img src="{{ poster }}" alt="">
-                <h6>{{ title }}</h6>
-            </div>
-        </a>
-    {% endfor %}
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
+
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
+</head>
+<body class='text-center text-white'>
+    <div class='container'>
+        <a href="{% url 'homepage' %}"><h1>Movie Mania</h1></a>
+        <input type="text" class='input' placeholder="Search" autofocus>
+        <br>
+        <div class='movies container search'>
+            
+        </div>
+        {% block content %}
+        
+        {% endblock %}
+    </div>
+    <script src="{% static '/js/main.js' %}"></script>
+</body>
+</html>
